--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,29 @@
   <name>flume_test Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+  
+  <!-- slf4j-api -->
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.12</version>
+	</dependency>
+	
+	<!-- logback -->
+	<dependency> 
+	    <groupId>ch.qos.logback</groupId> 
+	    <artifactId>logback-core</artifactId> 
+	    <version>1.1.3</version> 
+	</dependency> 
+	<dependency> 
+	    <groupId>ch.qos.logback</groupId> 
+	    <artifactId>logback-classic</artifactId> 
+	    <version>1.1.3</version> 
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
  	<dependency>
